--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,9 +8,9 @@
     </div>
 
     <ul class="sidebar-nav">
-      <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
+      <!-- <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
         <a href="/">Home</a>
-      </li>
+      </li> -->
       <li class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}">
         <a href="/blog/">Blog</a>
       </li>
