--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,10 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
+
+  <br />
+  If you liked this post, you can <a href="https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&amp;text={{ page.title }}&amp;via=jonathanhirz" target="_blank"> share it with your followers</a> or <a href="https://twitter.com/jonathanhirz"> follow me on Twitter</a>!
+
 </div>
 
 <div id="page-navigation">
