--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,9 +8,9 @@
     </div>
 
     <ul class="sidebar-nav">
-      <!-- <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
-        <a href="/">Home</a>
-      </li> -->
+      <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
+        <a href="/">Games</a>
+      </li>
       <li class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}">
         <a href="/blog/">Blog</a>
       </li>
@@ -31,7 +31,7 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-      <li><a href="http://twitter.com/jonathanhirz">@jonathanhirz</a></li>
+      <li class="sidebar-nav-item"><a href="http://twitter.com/jonathanhirz">@jonathanhirz</a></li>
 
 
     </ul>
