--- a/_layouts/gamePage.html
+++ b/_layouts/gamePage.html
@@ -5,4 +5,7 @@ layout: default
 <div class="gamePage">
   <h1 class="page-title">{{ page.title }}</h1>
   {{ content }}
+
+  <br />
+  If you like this game, you can <a href="https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&amp;text={{ page.title }}&amp;via=jonathanhirz" target="_blank"> share it with your followers</a> or <a href="https://twitter.com/jonathanhirz"> follow me on Twitter</a>!
 </div>
