--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
   {{ content }}
 
   <br />
-  If you liked this post, you can <a href="https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&amp;text={{ page.title }}&amp;via=jonathanhirz" target="_blank"> share it with your followers</a> or <a href="https://twitter.com/jonathanhirz"> follow me on Twitter</a>!
+  If you like this post, you can <a href="https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&amp;text={{ page.title }}&amp;via=jonathanhirz" target="_blank"> share it with your followers</a> or <a href="https://twitter.com/jonathanhirz"> follow me on Twitter</a>!
 
 </div>
 
