--- a/_layouts/unityPage.html
+++ b/_layouts/unityPage.html
@@ -6,7 +6,6 @@ layout: default-unity
 
   <div class="unity-content">
   <h1 class="page-title">{{ page.title }}</h1>
-  {{ content }}
   	<div id="unityPlayer">
   		<div class="missing">
   			<a href="http://unity3d.com/webplayer/" title="Unity Web Player. Install now!">
@@ -17,6 +16,8 @@ layout: default-unity
   	<br />
   	<p class="footer">&laquo; created with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
   </div>
+  {{ content }}
 
-
+  <br />
+  If you like this game, you can <a href="https://twitter.com/intent/tweet?url={{ site.url }}{{ page.url }}&amp;text={{ page.title }}&amp;via=jonathanhirz" target="_blank"> share it with your followers</a> or <a href="https://twitter.com/jonathanhirz"> follow me on Twitter</a>!
 </div>
