--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -83,6 +83,11 @@ html {
   font-size: 1.2rem;
 }
 
+.sidebar-about img {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* Sidebar nav */
 .sidebar-nav {
   padding-left: 0;
