--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,7 +11,7 @@
     </div>
 
     <ul class="sidebar-nav">
-      <li class="sidebar-nav-item{% if page.title == "Home" %} active{% endif %}">
+      <li class="sidebar-nav-item{% if page.title == "I Make Games" %} active{% endif %}">
         <a href="/">Games</a>
       </li>
       <li class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}">
@@ -33,33 +33,6 @@
           {% endif %}
         {% endif %}
       {% endfor %}
-      <li class="sidebar-nav-item"><a href="http://twitter.com/jonathanhirz">@jonathanhirz</a></li>
-
-      <br />
-      <li class="sidebar-nav-item"><a href="http://jonathanhirz.itch.io"><img src="/images/itch.png" /></a></li>
-      <li class="sidebar-nav-item"><a href="http://patreon.com/jonathanhirz"><img src="/images/patreon.png" /></a></li>
-
-
-    <!-- Begin MailChimp Signup Form -->
-    <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-    <style type="text/css">
-      #mc_embed_signup{ }
-      #mc-embedded-subscribe-form.validate{ padding: 0px; }
-      /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-    </style>
-    <div id="mc_embed_signup">
-    <form action="//jonathanhirz.us8.list-manage.com/subscribe/post?u=a20fdf068b043acc0164ffe9c&amp;id=d21dea06f4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-
-      <li class="sidebar-nav-item">Sign up for my newsletter (NO SPAM!)</li>
-      <input style="margin-top: 12px" type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <div style="position: absolute; left: -5000px;"><input type="text" name="b_a20fdf068b043acc0164ffe9c_d21dea06f4" tabindex="-1" value=""></div>
-        <div><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </form>
-    </div>
-
-    <!--End mc_embed_signup-->
 
     </ul>
 
