--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,6 +14,9 @@
       <li class="sidebar-nav-item{% if page.title == "I Make Games" %} active{% endif %}">
         <a href="/">Games</a>
       </li>
+      <li class="sidebar-nav-item">
+        <a href="/presskit/">presskit()</a>
+      </li>
       <li class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}">
         <a href="/blog/">Blog</a>
       </li>
